# ca-district-mapper

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Launch California District Mapper.bat  Launch California District Mapper.command  README.md  Stop California District Mapper.bat  Stop California District Mapper.command  docker-compose.yml  docker-entrypoint.sh  launch.bat  launch.sh  requirements.txt  reset.bat  reset.sh  stop.bat  stop.sh
.claude/: settings.local.json
.github/workflows/: release.yml  tauri-release.yml
backend-packaging/: build_sidecar.ps1  build_sidecar.sh  district_mapper.spec
config/: bef_sources.yaml
db/migrations/: 001_initial_schema.sql  002_add_zip_to_geocoded_records.sql  003_jobs_table.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: DistrictChart.tsx  (+7 more)
scripts/: launch.bat  launch.sh  load_bef.py  reset.bat  reset.sh  stop.bat  stop.sh
src/: db.py  paths.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: app.py  deps.py  sidecar.py
src/geocode/: __init__.py  client.py  parser.py  runner.py
src/guards/: pii_guard.py
src/ingest/: __init__.py  loader.py  normalize.py  validate.py
src/match/: __init__.py  assigner.py  bef_config.py  bef_loader.py
src/reports/: __init__.py  queries.py  writer.py
tests/: conftest.py  test_api.py  test_geocode.py  test_ingest.py  test_match.py  test_reports.py
(+5 files in other folders)
