[package]
name = "district-mapper"
version = "0.1.0"
description = "California District Mapper desktop app"
authors = ["chnnick"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "district_mapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
